loco-gen/tests/templates/snapshots/generate[tests_worker_file]@worker.snap
---
source: loco-gen/tests/templates/worker.rs
expression: "fs::read_to_string(tests_worker_path.join(\"register_email.rs\")).expect(\"Failed to read generated tests worker file: register_email.rs\")"
---
use loco_rs::{bgworker::BackgroundWorker, testing::prelude::*};
use tester::{
    app::App,
    workers::register_email::{Worker, WorkerArgs},
};
use serial_test::serial;

#[tokio::test]
#[serial]
async fn test_run_register_email_worker() {
    let boot = boot_test::<App>().await.unwrap();

    // Execute the worker ensuring that it operates in 'ForegroundBlocking' mode, which prevents the addition of your worker to the background
    assert!(
        Worker::perform_later(&boot.app_context,WorkerArgs {})
            .await
            .is_ok()
    );
    // Include additional assert validations after the execution of the worker
}
