loco-gen/tests/templates/snapshots/generate[views_[edit]]@Html_scaffold.snap
---
source: loco-gen/tests/templates/scaffold.rs
expression: "fs::read_to_string(views_path.join(format!(\"{view}.html\"))).expect(\"view file missing\")"
---
{% extends "base.html" %}

{% block title %}
Edit movie: {{ item.id }}
{% endblock title %}

{% block content %}
<h1>Edit movie: {{ item.id }}</h1>
<div class="mb-10">
    <form action="/movies/{{ item.id }}" method="post">
    <div class="mb-5">
    <div>
            <label>title</label>
            <br />
            <input id="title" name="title" type="text" value="{{item.title}}"></input>
            </div>
    <div>
    <div class="mt-5">
            <button class=" text-xs py-3 px-6 rounded-lg bg-gray-900 text-white" type="submit">Submit</button>
            <button class="text-xs py-3 px-6 rounded-lg bg-red-600 text-white"
                        onclick="confirmDelete(event)">Delete</button>
        </div>
    </form>
</div>
<a href="/movies">Back to movies</a>
</div>
{% endblock content %}

{% block js %}
<script>
function confirmDelete(event) {
    event.preventDefault();
    if (confirm("Are you sure you want to delete this item?")) {
        var xhr = new XMLHttpRequest();
        xhr.open("DELETE", "/movies/{{ item.id }}", true);
        xhr.onreadystatechange = function () {
            if (xhr.readyState == 4 && xhr.status == 200) {
                window.location.href = "/movies";
            }
        };
        xhr.send();
    }
}
</script>
{% endblock js %}
