loco-gen/tests/templates/snapshots/inject[cargo_toml]@deployment.snap
---
source: loco-gen/tests/templates/deployment.rs
expression: "fs::read_to_string(tree_fs.root.join(\"Cargo.toml\")).expect(\"cargo.toml not exists\")"
---
[dependencies]
shuttle-axum = "0.51.0"
shuttle-runtime = { version = "0.51.0", default-features = false }
shuttle-shared-db = { version = "0.51.0", features = ["postgres"] }


[[bin]]
name = "tester"
path = "src/bin/shuttle.rs"

[dev-dependencies]
